Feat(eos_cli_config_gen): Implement managing RCF. (#3798)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-general.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-general.cfg
@@ -24,6 +24,18 @@ router general
       routes dynamic prefix-list DYNAMIC_TEST_PREFIX_LIST_2
       exit
    !
+   control-functions
+      code unit code1
+         function ACCEPT_ALL() {
+           return true;
+           }
+         EOF
+      code unit code2
+         function DENY_ALL() {
+           return true;
+           }
+         EOF
+   !
    exit
 !
 end
