Changing names of few more files.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -40,7 +40,6 @@ hardware
 hide-passwords
 hostname
 igmp-snooping
-influxdb
 interface-defaults
 interface-profiles
 ip-access-lists
@@ -93,6 +92,7 @@ mlag-configuration
 monitor-layer1
 monitor-connectivity
 monitor-sessions
+monitor-telemetry-influx
 mpls
 none_configuration
 ntp
