--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
@@ -53,11 +53,10 @@ management security
    ssl profile tls-versions-profile
       tls versions 1.0 1.1
    session shared-secret profile profile0
-      secret name1 7 $1c$mNvaIXPetcQ3hy7oUnTU3w== receive-lifetime infinite transmit-lifetime infinite
+      secret name1 7 $1c$mNvaIXPetcQ3hy7oUnTU3w== receive-lifetime 2024-12-20 10:00:00 2025-12-20 10:00:00 transmit-lifetime 2024-12-20 10:00:00 2025-12-20 10:00:00
    session shared-secret profile profile1
       secret name0 7 $1c$mNvaIXPetcSA2UnFwIaxwA== receive-lifetime infinite transmit-lifetime infinite
-      secret name1 7 $1c$mNvaIXPetcQ3hy7oUnTU3w== receive-lifetime infinite transmit-lifetime infinite
-      secret name2 7 $1c$mNvaIXPetcR9edexxanqlQ== receive-lifetime 12/20/2024 10:00:00 12/20/2025 10:00:00 transmit-lifetime infinite
+      secret name1 7 $1c$mNvaIXPetcQ3hy7oUnTU3w== receive-lifetime 12/20/2024 10:00:00 12/20/2025 10:00:00 transmit-lifetime infinite
    session shared-secret profile profile2
       secret name3 7 $1c$mNvaIXPetcQoGbYuwfX4Ng== receive-lifetime 2024-12-20 10:00:00 2025-12-20 10:00:00 transmit-lifetime 12/20/2024 10:00:00 12/10/2025 10:00:00
 !
