issue-3740: Added the molecule

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/logging.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/logging.yml
@@ -48,3 +48,10 @@ logging:
       discards:
         global: true
         interval: 10
+  level:
+    - facility_name: BGP
+      severity: 0
+    - facility_name: AAA
+      severity: warnings
+    - facility_name: ACL
+      severity: critical
