--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/logging.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/logging.schema.yml
@@ -151,6 +151,7 @@ keys:
                     description: Logging interval in seconds.
       level:
         type: list
+        description: Configure logging severity.
         primary_key: facility_name
         convert_types:
           - dict
@@ -164,4 +165,31 @@ keys:
               type: str
               convert_types:
                 - int
-              description: Severity of facility.
+              description: |-
+                Severity of facility. Below are the supported severites.
+                alerts         Immediate action needed           (severity=1)
+                critical       Critical conditions               (severity=2)
+                debugging      Debugging messages                (severity=7)
+                emergencies    System is unusable                (severity=0)
+                errors         Error conditions                  (severity=3)
+                informational  Informational messages            (severity=6)
+                notifications  Normal but significant conditions (severity=5)
+                warnings       Warning conditions                (severity=4)
+                <0-7>          Severity level value
+              valid_values:
+                - alerts
+                - critical
+                - debugging
+                - emergencies
+                - errors
+                - informational
+                - notifications
+                - warnings
+                - '0'
+                - '1'
+                - '2'
+                - '3'
+                - '4'
+                - '5'
+                - '6'
+                - '7'
