--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/logging-minimal.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/logging-minimal.cfg
@@ -6,6 +6,7 @@ logging buffered 64000
 logging console informational
 logging monitor debugging
 logging facility syslog
+logging facility syslog
 !
 hostname logging-minimal
 !
