Fix(eos_designs): Wrong IPsec profile name for Zscaler

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -345,7 +345,7 @@ interface Tunnel100
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
-   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+   tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-1-PROFILE
 !
 interface Tunnel101
    description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
@@ -355,7 +355,7 @@ interface Tunnel101
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
-   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+   tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-1-PROFILE
 !
 interface Tunnel102
    description Internet Exit ZSCALER-EXIT-POLICY-1 TER
@@ -365,7 +365,7 @@ interface Tunnel102
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
-   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+   tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-1-PROFILE
 !
 interface Vxlan1
    description cv-pathfinder-edge_VTEP
