--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -366,7 +366,7 @@ interface Tunnel100
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
-   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+   tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-1-PROFILE
 !
 interface Tunnel101
    description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
@@ -376,7 +376,7 @@ interface Tunnel101
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
-   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+   tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-1-PROFILE
 !
 interface Tunnel102
    description Internet Exit ZSCALER-EXIT-POLICY-1 TER
@@ -386,7 +386,7 @@ interface Tunnel102
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
-   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+   tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-1-PROFILE
 !
 interface Tunnel110
    description Internet Exit ZSCALER-EXIT-POLICY-2 PRI
@@ -396,7 +396,7 @@ interface Tunnel110
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
-   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+   tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-2-PROFILE
 !
 interface Tunnel111
    description Internet Exit ZSCALER-EXIT-POLICY-2 SEC
@@ -406,7 +406,7 @@ interface Tunnel111
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
-   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+   tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-2-PROFILE
 !
 interface Tunnel112
    description Internet Exit ZSCALER-EXIT-POLICY-2 TER
@@ -416,7 +416,7 @@ interface Tunnel112
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
-   tunnel ipsec profile ZSCALER-IPSEC-PROFILE
+   tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-2-PROFILE
 !
 interface Vxlan1
    description cv-pathfinder-edge1_VTEP
