--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -722,7 +722,7 @@ tunnel_interfaces:
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.37.121.1
-  ipsec_profile: ZSCALER-IPSEC-PROFILE
+  ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
   nat_profile: VRF-AWARE-NAT
 - name: Tunnel101
   description: Internet Exit ZSCALER-EXIT-POLICY-1 SEC
@@ -731,7 +731,7 @@ tunnel_interfaces:
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.39.77.1
-  ipsec_profile: ZSCALER-IPSEC-PROFILE
+  ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
   nat_profile: VRF-AWARE-NAT
 - name: Tunnel102
   description: Internet Exit ZSCALER-EXIT-POLICY-1 TER
@@ -740,7 +740,7 @@ tunnel_interfaces:
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.50.9.1
-  ipsec_profile: ZSCALER-IPSEC-PROFILE
+  ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
   nat_profile: VRF-AWARE-NAT
 - name: Tunnel110
   description: Internet Exit ZSCALER-EXIT-POLICY-2 PRI
@@ -749,7 +749,7 @@ tunnel_interfaces:
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.37.121.1
-  ipsec_profile: ZSCALER-IPSEC-PROFILE
+  ipsec_profile: IE-ZSCALER-EXIT-POLICY-2-PROFILE
   nat_profile: VRF-AWARE-NAT
 - name: Tunnel111
   description: Internet Exit ZSCALER-EXIT-POLICY-2 SEC
@@ -758,7 +758,7 @@ tunnel_interfaces:
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.39.77.1
-  ipsec_profile: ZSCALER-IPSEC-PROFILE
+  ipsec_profile: IE-ZSCALER-EXIT-POLICY-2-PROFILE
   nat_profile: VRF-AWARE-NAT
 - name: Tunnel112
   description: Internet Exit ZSCALER-EXIT-POLICY-2 TER
@@ -767,7 +767,7 @@ tunnel_interfaces:
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.50.9.1
-  ipsec_profile: ZSCALER-IPSEC-PROFILE
+  ipsec_profile: IE-ZSCALER-EXIT-POLICY-2-PROFILE
   nat_profile: VRF-AWARE-NAT
 monitor_connectivity:
   interface_sets:
