Fix(eos_designs): Sanitize intefrace name in STUN profile name

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
@@ -145,7 +145,7 @@ router path-selection
    path-group MPLS id 100
       keepalive interval 300 milliseconds failure-threshold 5 intervals
       !
-      local interface Ethernet2
+      local interface Ethernet2/2
    !
    path-group Satellite id 104
    !
@@ -248,7 +248,7 @@ interface Ethernet1
    no switchport
    ip address 10.7.7.7/31
 !
-interface Ethernet2
+interface Ethernet2/2
    description Colt_10000
    no shutdown
    no switchport
@@ -410,7 +410,7 @@ management security
 stun
    server
       local-interface Ethernet1
-      local-interface Ethernet2
+      local-interface Ethernet2/2
       local-interface Ethernet3
       ssl profile profileA
 !
