--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -245,7 +245,7 @@ wan_rr:
           ip_address: 10.7.7.7/31
           public_ip: 172.17.7.7
           peer_ip: 10.7.7.6
-        - name: Ethernet2
+        - name: Ethernet2/2
           wan_carrier: Colt
           wan_circuit_id: 10000
           ip_address: 172.16.0.1/31
