Refactor: Fix schema

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -5487,8 +5487,8 @@ $defs:
           description: 'Redistribute the connected subnet for the uplunk per VRF into
             overlay BGP.
 
-            By default the uplink  subnets are not redistributed into the overlay
-            routing protocol per VRF.
+            By default the uplink subnets are not redistributed into the overlay routing
+            protocol per VRF.
 
             Setting `redistribute_uplink_subnets_vrfs: true` under a tenant will change
             this default and allow redistribution of these subnets for all VRFs in
@@ -5854,7 +5854,7 @@ $defs:
                 description: 'Redistribute the connected subnet for the uplunk per
                   VRF into overlay BGP.
 
-                  By default the uplink  subnets are not redistributed into the overlay
+                  By default the uplink subnets are not redistributed into the overlay
                   routing protocol per VRF.
 
                   Setting `redistribute_uplink_subnets_vrfs: true` under a VRF will
