--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vrf-address-families.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vrf-address-families.yml
@@ -67,8 +67,17 @@ router_bgp:
             activate: true
             route_map_in: FOO
             route_map_out: BAR
+          - ip_address: aa::2
+            activate: true
+            rcf_in: VRF_AFIPV6_RCF_IN()
+            rcf_out: VRF_AFIPV6_RCF_OUT()
         networks:
           - prefix: aa::/64
+        redistribute_routes:
+          - source_protocol: connected
+            rcf: VRF_AFIPV6_RCF_CONNECTED()
+          - source_protocol: static
+            route_map: VRF_AFIPV6_RM_STATIC
       address_family_ipv4_multicast:
         bgp:
           missing_policy:
@@ -84,6 +93,11 @@ router_bgp:
         networks:
           - prefix: 239.0.0.0/24
             route_map: BARFOO
+        redistribute_routes:
+          - source_protocol: connected
+            rcf: VRF_AFIPV4MULTI_RCF_CONNECTED()
+          - source_protocol: static
+            route_map: VRF_AFIPV4MULTI_RM_STATIC
       address_family_ipv6_multicast:
         bgp:
           missing_policy:
@@ -94,6 +108,11 @@ router_bgp:
             activate: false
         networks:
           - prefix: ff08:1::/64
+        redistribute_routes:
+          - source_protocol: connected
+            rcf: VRF_AFIPV6MULTI_RCF_CONNECTED()
+          - source_protocol: static
+            route_map: VRF_AFIPV6MULTI_RM_STATIC
       address_family_flow_spec_ipv4:
         bgp:
           missing_policy:
