Feat(eos_designs): Add support for local internet exit

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -73,6 +73,7 @@ router adaptive-virtual-topology
       path-selection load-balance LB-DEFAULT-AVT-POLICY-DEFAULT
    !
    profile DEFAULT-AVT-POLICY-VIDEO
+      internet-exit policy DIRECT-EXIT-POLICY-1
       path-selection load-balance LB-DEFAULT-AVT-POLICY-VIDEO
    !
    profile DEFAULT-POLICY-DEFAULT
@@ -115,6 +116,9 @@ router adaptive-virtual-topology
 !
 router internet-exit
     !
+    exit-group DIRECT-EXIT-POLICY-1
+        local connection Ethernet2
+    !
     exit-group ZSCALER-EXIT-POLICY-1_PRI
         local connection IE-Tunnel100
     !
@@ -123,6 +127,9 @@ router internet-exit
     !
     exit-group ZSCALER-EXIT-POLICY-1_TER
         local connection IE-Tunnel102
+    !
+    policy DIRECT-EXIT-POLICY-1
+        exit-group DIRECT-EXIT-POLICY-1
     !
     policy ZSCALER-EXIT-POLICY-1
         exit-group ZSCALER-EXIT-POLICY-1_PRI
@@ -203,6 +210,9 @@ router path-selection
       path-group INET priority 2
 !
 router service-insertion
+   connection Ethernet2
+      interface Ethernet2 next-hop 172.16.5.4
+      monitor connectivity host Ethernet2
    connection IE-Tunnel100
       interface Tunnel100 primary
       monitor connectivity host IE-Tunnel100
@@ -424,9 +434,16 @@ application traffic recognition
 !
 monitor connectivity
    no shutdown
+   interface set SET-Ethernet2 Ethernet2
    interface set SET-Tunnel100 Tunnel100
    interface set SET-Tunnel101 Tunnel101
    interface set SET-Tunnel102 Tunnel102
+   !
+   host Ethernet2
+      description
+      Internet Exit DIRECT-EXIT-POLICY-1
+      local-interfaces SET-Ethernet2
+      ip 172.16.5.4
    !
    host IE-Tunnel100
       description
