--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -70,6 +70,7 @@ router adaptive-virtual-topology
       path-selection load-balance LB-DEFAULT-AVT-POLICY-DEFAULT
    !
    profile DEFAULT-AVT-POLICY-VIDEO
+      internet-exit policy DIRECT-EXIT-POLICY-1
       path-selection load-balance LB-DEFAULT-AVT-POLICY-VIDEO
    !
    profile DEFAULT-POLICY-DEFAULT
@@ -109,6 +110,9 @@ router adaptive-virtual-topology
 !
 router internet-exit
     !
+    exit-group DIRECT-EXIT-POLICY-1
+        local connection Ethernet3
+    !
     exit-group ZSCALER-EXIT-POLICY-1_PRI
         local connection IE-Tunnel100
     !
@@ -126,6 +130,9 @@ router internet-exit
     !
     exit-group ZSCALER-EXIT-POLICY-2_TER
         local connection IE-Tunnel112
+    !
+    policy DIRECT-EXIT-POLICY-1
+        exit-group DIRECT-EXIT-POLICY-1
     !
     policy ZSCALER-EXIT-POLICY-1
         exit-group ZSCALER-EXIT-POLICY-1_PRI
@@ -197,6 +204,9 @@ router path-selection
       path-group INET priority 2
 !
 router service-insertion
+   connection Ethernet3
+      interface Ethernet3 next-hop 172.16.5.40
+      monitor connectivity host Ethernet3
    connection IE-Tunnel100
       interface Tunnel100 primary
       monitor connectivity host IE-Tunnel100
@@ -474,12 +484,19 @@ application traffic recognition
 !
 monitor connectivity
    no shutdown
+   interface set SET-Ethernet3 Ethernet3
    interface set SET-Tunnel100 Tunnel100
    interface set SET-Tunnel101 Tunnel101
    interface set SET-Tunnel102 Tunnel102
    interface set SET-Tunnel110 Tunnel110
    interface set SET-Tunnel111 Tunnel111
    interface set SET-Tunnel112 Tunnel112
+   !
+   host Ethernet3
+      description
+      Internet Exit DIRECT-EXIT-POLICY-1
+      local-interfaces SET-Ethernet3
+      ip 172.16.5.40
    !
    host IE-Tunnel100
       description
