--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -631,11 +631,14 @@ keys:
           description: Internet-exit policy name.
         type:
           type: str
-          valid_values:
-          - zscaler
           description: 'Internet-exit policy type.
 
-            Only Zscaler supported.'
+            direct: Exit directly over wan interfaces
+
+            zscaler: Exit using zscaler secure web gateway service'
+          valid_values:
+          - direct
+          - zscaler
           required: true
         fallback_to_system_default:
           type: bool
@@ -8863,7 +8866,6 @@ $defs:
                     description: Internet-exit policy name.
                   tunnel_interface_numbers:
                     type: str
-                    required: true
                     description: 'Number range to use for Tunnel interfaces to an
                       internet-exit service provider using this local interface.
 
