--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -71,6 +71,7 @@ router adaptive-virtual-topology
          avt profile TRANSIT-AVT-POLICY-DEFAULT
    !
    profile CUSTOM-VOICE-PROFILE-NAME
+      internet-exit policy DIRECT-EXIT-POLICY-2
       path-selection load-balance LB-CUSTOM-VOICE-PROFILE-NAME
    !
    profile DEFAULT-AVT-POLICY-CONTROL-PLANE
@@ -126,6 +127,15 @@ router adaptive-virtual-topology
       avt policy TRANSIT-AVT-POLICY
       avt profile TRANSIT-AVT-POLICY-DEFAULT id 1
       avt profile CUSTOM-VOICE-PROFILE-NAME id 42
+!
+router internet-exit
+    !
+    exit-group DIRECT-EXIT-POLICY-2
+        local connection Ethernet2.42
+    !
+    policy DIRECT-EXIT-POLICY-2
+        exit-group DIRECT-EXIT-POLICY-2
+        exit-group system-default-exit-group
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
@@ -216,6 +226,11 @@ router path-selection
       path-group INET
       path-group LAN_HA
       path-group MPLS priority 2
+!
+router service-insertion
+   connection Ethernet2.42
+      interface Ethernet2.42 next-hop 123.12.3.4
+      monitor connectivity host Ethernet2.42
 !
 spanning-tree mode none
 !
@@ -382,6 +397,16 @@ application traffic recognition
    !
    field-set l4-port TCP-SRC-2
       42
+!
+monitor connectivity
+   no shutdown
+   interface set SET-Ethernet2.42 Ethernet2.42
+   !
+   host Ethernet2.42
+      description
+      Internet Exit DIRECT-EXIT-POLICY-2
+      local-interfaces SET-Ethernet2.42
+      ip 123.12.3.4
 !
 ip routing
 ip routing vrf ATTRACTED-VRF-FROM-UPLINK
