--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -406,6 +406,7 @@ router_adaptive_virtual_topology:
     load_balance_policy: LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
   - name: DEFAULT-AVT-POLICY-VIDEO
     load_balance_policy: LB-DEFAULT-AVT-POLICY-VIDEO
+    internet_exit_policy: DIRECT-EXIT-POLICY-1
   - name: DEFAULT-AVT-POLICY-DEFAULT
     load_balance_policy: LB-DEFAULT-AVT-POLICY-DEFAULT
   - name: PROD-AVT-POLICY-VOICE
@@ -638,6 +639,11 @@ ip_nat:
 router_service_insertion:
   enabled: true
   connections:
+  - name: Ethernet3
+    ethernet_interface:
+      name: Ethernet3
+      next_hop: 172.16.5.40
+    monitor_connectivity_host: Ethernet3
   - name: IE-Tunnel100
     tunnel_interface:
       primary: Tunnel100
@@ -664,6 +670,9 @@ router_service_insertion:
     monitor_connectivity_host: IE-Tunnel112
 router_internet_exit:
   exit_groups:
+  - name: DIRECT-EXIT-POLICY-1
+    local_connections:
+    - name: Ethernet3
   - name: ZSCALER-EXIT-POLICY-1_PRI
     local_connections:
     - name: IE-Tunnel100
@@ -683,6 +692,9 @@ router_internet_exit:
     local_connections:
     - name: IE-Tunnel112
   policies:
+  - name: DIRECT-EXIT-POLICY-1
+    exit_groups:
+    - name: DIRECT-EXIT-POLICY-1
   - name: ZSCALER-EXIT-POLICY-1
     exit_groups:
     - name: ZSCALER-EXIT-POLICY-1_PRI
@@ -773,6 +785,8 @@ tunnel_interfaces:
   nat_profile: VRF-AWARE-NAT
 monitor_connectivity:
   interface_sets:
+  - name: SET-Ethernet3
+    interfaces: Ethernet3
   - name: SET-Tunnel100
     interfaces: Tunnel100
   - name: SET-Tunnel101
@@ -786,6 +800,11 @@ monitor_connectivity:
   - name: SET-Tunnel112
     interfaces: Tunnel112
   hosts:
+  - name: Ethernet3
+    description: Internet Exit DIRECT-EXIT-POLICY-1
+    ip: 172.16.5.40
+    local_interfaces: SET-Ethernet3
+    address_only: false
   - name: IE-Tunnel100
     description: Internet Exit ZSCALER-EXIT-POLICY-1 PRI
     ip: 10.37.121.1
