--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -2287,11 +2287,15 @@ keys:
                     type: str
                     valid_values:
                       - "attached-host"
+                      - "bgp"
                       - "connected"
+                      - "dynamic"
                       - "isis"
                       - "ospf"
                       - "ospfv3"
+                      - "rip"
                       - "static"
+                      - "user"
                   route_map:
                     type: str
                   include_leaked:
