change connection and monitor name by prefixing IE-

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -117,7 +117,7 @@ router adaptive-virtual-topology
 router internet-exit
     !
     exit-group DIRECT-EXIT-POLICY-1
-        local connection Ethernet2
+        local connection IE-Ethernet2
     !
     exit-group ZSCALER-EXIT-POLICY-1_PRI
         local connection IE-Tunnel100
@@ -210,9 +210,9 @@ router path-selection
       path-group INET priority 2
 !
 router service-insertion
-   connection Ethernet2
+   connection IE-Ethernet2
       interface Ethernet2 next-hop 172.16.5.4
-      monitor connectivity host Ethernet2
+      monitor connectivity host IE-Ethernet2
    connection IE-Tunnel100
       interface Tunnel100 primary
       monitor connectivity host IE-Tunnel100
@@ -439,7 +439,7 @@ monitor connectivity
    interface set SET-Tunnel101 Tunnel101
    interface set SET-Tunnel102 Tunnel102
    !
-   host Ethernet2
+   host IE-Ethernet2
       description
       Internet Exit DIRECT-EXIT-POLICY-1
       local-interfaces SET-Ethernet2
