--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -111,7 +111,7 @@ router adaptive-virtual-topology
 router internet-exit
     !
     exit-group DIRECT-EXIT-POLICY-1
-        local connection Ethernet3
+        local connection IE-Ethernet3
     !
     exit-group ZSCALER-EXIT-POLICY-1_PRI
         local connection IE-Tunnel100
@@ -204,9 +204,9 @@ router path-selection
       path-group INET priority 2
 !
 router service-insertion
-   connection Ethernet3
+   connection IE-Ethernet3
       interface Ethernet3 next-hop 172.16.5.40
-      monitor connectivity host Ethernet3
+      monitor connectivity host IE-Ethernet3
    connection IE-Tunnel100
       interface Tunnel100 primary
       monitor connectivity host IE-Tunnel100
@@ -492,7 +492,7 @@ monitor connectivity
    interface set SET-Tunnel111 Tunnel111
    interface set SET-Tunnel112 Tunnel112
    !
-   host Ethernet3
+   host IE-Ethernet3
       description
       Internet Exit DIRECT-EXIT-POLICY-1
       local-interfaces SET-Ethernet3
