--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -131,7 +131,7 @@ router adaptive-virtual-topology
 router internet-exit
     !
     exit-group DIRECT-EXIT-POLICY-2
-        local connection Ethernet2.42
+        local connection IE-Ethernet2.42
     !
     policy DIRECT-EXIT-POLICY-2
         exit-group DIRECT-EXIT-POLICY-2
@@ -228,9 +228,9 @@ router path-selection
       path-group MPLS priority 2
 !
 router service-insertion
-   connection Ethernet2.42
+   connection IE-Ethernet2.42
       interface Ethernet2.42 next-hop 123.12.3.4
-      monitor connectivity host Ethernet2.42
+      monitor connectivity host IE-Ethernet2.42
 !
 spanning-tree mode none
 !
@@ -402,7 +402,7 @@ monitor connectivity
    no shutdown
    interface set SET-Ethernet2.42 Ethernet2.42
    !
-   host Ethernet2.42
+   host IE-Ethernet2.42
       description
       Internet Exit DIRECT-EXIT-POLICY-2
       local-interfaces SET-Ethernet2.42
