--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
@@ -670,11 +670,11 @@ ip_nat:
 router_service_insertion:
   enabled: true
   connections:
-  - name: Ethernet2
+  - name: IE-Ethernet2
     ethernet_interface:
       name: Ethernet2
       next_hop: 172.16.5.4
-    monitor_connectivity_host: Ethernet2
+    monitor_connectivity_host: IE-Ethernet2
   - name: IE-Tunnel100
     tunnel_interface:
       primary: Tunnel100
@@ -691,7 +691,7 @@ router_internet_exit:
   exit_groups:
   - name: DIRECT-EXIT-POLICY-1
     local_connections:
-    - name: Ethernet2
+    - name: IE-Ethernet2
   - name: ZSCALER-EXIT-POLICY-1_PRI
     local_connections:
     - name: IE-Tunnel100
@@ -772,7 +772,7 @@ monitor_connectivity:
   - name: SET-Tunnel102
     interfaces: Tunnel102
   hosts:
-  - name: Ethernet2
+  - name: IE-Ethernet2
     description: Internet Exit DIRECT-EXIT-POLICY-1
     ip: 172.16.5.4
     local_interfaces: SET-Ethernet2
