Feat(eos_cli_config_gen): Add support for isis spf-interval hold timer. (#3912)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-isis-new.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-isis-new.cfg
@@ -79,7 +79,7 @@ router isis EVPN_UNDERLAY
    timers local-convergence-delay 15000 protected-prefixes
    set-overload-bit on-startup wait-for-bgp timeout 10
    advertise passive-only
-   spf-interval 250 10
+   spf-interval 250 seconds 10 milliseconds 20 milliseconds
    authentication mode md5 level-1
    authentication mode sha key-id 2 level-2
    graceful-restart
