--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -13204,9 +13204,17 @@ keys:
             type: int
             convert_types:
             - str
-            min: 1
-            max: 300
-            description: Maximum interval between two SPFs in seconds.
+            description: 'Maximum interval between two SPFs in seconds or milliseconds.
+
+              Range in seconds: <1-300>
+
+              Range in milliseconds: <1-300000>'
+          interval_unit:
+            type: str
+            valid_values:
+            - seconds
+            - milliseconds
+            description: If interval unit is not defined EOS takes `seconds` by default.
           wait_interval:
             type: int
             convert_types:
@@ -13214,6 +13222,13 @@ keys:
             min: 1
             max: 300000
             description: Initial wait interval for SPF in milliseconds.
+          hold_interval:
+            type: int
+            convert_types:
+            - str
+            min: 1
+            max: 300000
+            description: Hold interval between the first and second SPF runs in milliseconds.
       graceful_restart:
         type: dict
         keys:
