--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/cv_pathfinder_internet_exit_policies.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/cv_pathfinder_internet_exit_policies.schema.yml
@@ -24,7 +24,7 @@ keys:
           description: |-
             Internet-exit policy type.
             direct: Exit directly over wan interfaces
-            zscaler: Exit using zscaler secure web gateway service
+            zscaler: Exit using Zscaler secure web gateway service
           valid_values:
             - direct
             - zscaler
